More physical pit, fixed projection

--- a/pump.ipynb
+++ b/pump.ipynb
@@ -13,7 +13,8 @@
     "from scipy import interpolate\n",
     "from scipy.optimize import approx_fprime\n",
     "\n",
-    "\n",
+    "plt.rcParams.update({'font.size': 14})\n",
+    "%config InlineBackend.figure_format = 'retina'\n",
     "\n",
     "%matplotlib notebook\n",
     "from matplotlib.animation import FuncAnimation"
@@ -26,23 +27,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "# approx dimensions http://www.leelikesbikes.com/build-your-own-pump-track.html\n",
+    "\n",
+    "# lenghts in meters\n",
+    "\n",
     "n = 1000\n",
-    "end = 2 * np.pi\n",
+    "end = 2.5\n",
+    "freq = 2 * np.pi / end\n",
     "l = np.linspace(0, end, n)\n",
     "phase_shift = 0\n",
-    "k = 0.6\n",
-    "phi = k * np.cos(l + phase_shift)\n",
-    "cos_a = -k * np.sin(l + phase_shift)\n",
-    "d_cos_a_dl = -k * np.cos(l + phase_shift)\n",
+    "k = 0.5\n",
+    "# phi = k * np.cos(l + phase_shift)\n",
+    "cos_a = -k * np.sin(freq * l + phase_shift)\n",
+    "d_cos_a_dl = -k * freq * np.cos(freq * l + phase_shift)\n",
     "sin_a = (1 - cos_a**2)**0.5\n",
     "\n",
     "dl = l[1] - l[0]\n",
     "y_ground = np.cumsum(cos_a * dl)\n",
     "x_ground = np.cumsum(sin_a * dl)\n",
+    "print(f\"height = {y_ground.max() - y_ground.min()}, lenght = {x_ground.max() - x_ground.min()}\")\n",
+    "\n",
+    "plt.figure(figsize=(10,4))\n",
     "plt.plot(x_ground, y_ground)\n",
     "\n",
     "xlim = (x_ground[0] - 1, x_ground[-1] + 1)\n",
-    "ylim = (-1.5, 3)\n",
+    "ylim = (-1, 0.5)\n",
+    "plt.grid()\n",
     "plt.gca().set_aspect('equal', adjustable='box')\n",
     "plt.xlim(xlim)\n",
     "plt.ylim(ylim)\n",
@@ -52,13 +63,19 @@
     "d_cos_a_dl = interpolate.interp1d(l, d_cos_a_dl) \n",
     "x_ground = interpolate.interp1d(l, x_ground) \n",
     "y_ground = interpolate.interp1d(l, y_ground) \n",
-    "phi = interpolate.interp1d(l, phi) \n",
-    "\n",
-    "x = np.arange(0, 10)\n",
-    "\n",
-    "y = np.exp(-x/3.0)\n",
-    "\n",
-    "f = interpolate.interp1d(x, y)\n",
+    "# phi = interpolate.interp1d(l, phi) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f4fec79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# x = np.arange(0, 10)\n",
+    "# y = np.exp(-x/3.0)\n",
+    "# f = interpolate.interp1d(x, y)\n",
     "\n",
     "r = lambda l : 0\n",
     "g = 9.8\n",
@@ -96,7 +113,6 @@
     "    \n",
     "    i += 1\n",
     "    \n",
-    "    \n",
     "# plt.plot(l, (np.cos(l/0.935)-1)/2)\n",
     "u = np.array(u)\n",
     "print(vl, vl0 + dt*(-(g+u)*cos_a(np.array(xl))).sum())\n",
@@ -113,11 +129,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fcd623fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u.min() / g, u.max() / g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "63e2b0b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(u)"
+    "x_ground(xl[-1])"
    ]
   },
   {
@@ -128,11 +154,13 @@
    "outputs": [],
    "source": [
     "class Env:\n",
-    "    def __init__(self, al0=0, ah0=0, vl0=8, vh0=None, xl0=0, xh0=0):\n",
+    "    def __init__(self, al0=0, ah0=0, vl0=5 / 18 * 5, vh0=None, xl0=0, xh0=0):\n",
     "        self.al = al0\n",
     "        self.ah = ah0\n",
     "        self.vl0 = vl0\n",
     "        self.vh0 = -vl0 * cos_a(xl0) if vh0 is None else vh0\n",
+    "        assert self.vh0 == 0.0\n",
+    "#         print(self.vh0)\n",
     "        self.vl = [vl0]\n",
     "        self.xl = [xl0]  # x_l(t)\n",
     "        self.xh = [xh0]\n",
@@ -144,8 +172,8 @@
     "        \n",
     "        for t in range(T):\n",
     "            cos_a_i = cos_a(self.xl[-1])\n",
-    "            al = -(g + u[t]) * cos_a_i\n",
     "            ah = u[t]\n",
+    "            al = -(g + ah) * cos_a_i\n",
     "            vl += al * dt\n",
     "            xl_next = self.xl[-1] + vl * dt + al * dt ** 2 / 2\n",
     "            if xl_next > l[-1]:\n",
@@ -154,7 +182,7 @@
     "\n",
     "        #     ah = ri - al*cos_a_i\n",
     "            vh += ah * dt\n",
-    "            self.xh.append(self.xh[-1] + vh * dt + ah * dt ** 2 / 2)\n",
+    "            self.xh.append(self.xh[-1] + vh * dt) #+ ah * dt ** 2 / 2)\n",
     "            self.vl.append(vl)\n",
     "        return self.xl, self.xh\n",
     "            \n",
@@ -207,7 +235,7 @@
     "def dfu(u):\n",
     "    env = Env()\n",
     "    env.ride(u)\n",
-    "    print(len(env.xl))\n",
+    "#     print(len(env.xl))\n",
     "    df = env.grad(u)\n",
     "    return df\n",
     "\n",
@@ -230,8 +258,7 @@
     "env.ride(u_)\n",
     "df = env.grad(u_)\n",
     "\n",
-    "xl, xh = env.xl, env.xh\n",
-    "env.vl, fu(u_)"
+    "xl, xh = env.xl, env.xh"
    ]
   },
   {
@@ -285,48 +312,99 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "baba5023",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
+    "%%time\n",
     "%matplotlib inline \n",
     "\n",
     "# ui = u.copy()\n",
-    "ui = -10*y_ground(xl)\n",
-    "plt.plot(x_ground(l), y_ground(l), 'b')\n",
-    "h =1 \n",
-    "flog = []\n",
-    "umin = -g * 10 \n",
-    "umax = 3 * g * 10\n",
+    "ui = - 10 * np.resize(y_ground(xl), 500)  # starting point\n",
+    "# np.zeros(400)\n",
+    "h = 2 \n",
+    "flog, steplog = [], []\n",
+    "umin = -g \n",
+    "umax = g * 2\n",
     "for i in range(100):\n",
     "    env = Env()\n",
     "    xl, xh = env.ride(ui)\n",
     "#     plot_ride(xl, xh, i)\n",
     "    df = env.grad(ui)\n",
+    "    ui_prev = ui.copy()\n",
     "    ui += h * df\n",
     "    \n",
     "    # ui -= ui.sum() / ui.size  # projection\n",
     "    \n",
     "    # project (TODO: analytic projection on intersection instead of alternating)\n",
-    "    for _ in range(20):\n",
+    "    proj_N = 25\n",
+    "    for j in range(proj_N):\n",
     "        # project on box\n",
+    "        ui_pre_proj = ui.copy()\n",
     "        ui = np.clip(ui, umin, umax)\n",
+    "        box_norm = np.linalg.norm(ui_pre_proj - ui, 1)\n",
+    "        if j > 0 and box_norm < 1e-5 * ui.size :\n",
+    "            break\n",
+    "        elif j == proj_N - 1:\n",
+    "            print(\"proj fail\")\n",
     "        \n",
-    "        # project on x_h[-1] = 0\n",
-    "        T = len(env.xh) - 1\n",
-    "        xh = np.cumsum(np.cumsum(ui * dt) * dt)[-1]\n",
-    "#         xh = env.xh[-1]\n",
+    "#         print(f\"{j}, box constr l1 norm: {}\")\n",
+    "        \n",
+    "        # project on x_h[-1] = 0  # why????\n",
+    "#         T = len(env.xh) - 1  # dont work since xh was calculated before projection on box\n",
+    "#         xh = np.sum(np.cumsum(ui[:T] * dt) * dt) \n",
+    "#         print(i, j, \"before proj\", env.xh[-1])\n",
+    "#         continue # skip proj on x_h[-1] = 0\n",
+    "        env_ = Env()\n",
+    "        env_.ride(ui)\n",
+    "#         print(i, j, \"before proj\", env_.xh[-1], \"\\n\")\n",
+    "        xh = env_.xh[-1]\n",
+    "        T = len(env_.xh) - 1\n",
     "        du = 1/ dt**2 * xh * 6 / (T * (T + 1) * (2 * T + 1)) * (np.arange(T) - T)\n",
     "        du.resize(len(ui))\n",
+    "#         print(du)\n",
     "        ui += du\n",
-    "    \n",
+    "        xh = np.sum(np.cumsum(ui * dt) * dt)\n",
+    "#         with open(\"tmp.dump\", \"w\") as fp:\n",
+    "#         np.savetxt(\"cum.dump\", np.cumsum(np.cumsum(ui * dt) * dt))\n",
+    "#         print(i, j, \"after proj\", xh)\n",
+    "#         env_ = Env()\n",
+    "#         env_.ride(ui)\n",
+    "#         np.savetxt(\"env.dump\", env_.xh)\n",
+    "#         print(i, j, \"after proj\", env_.xh[-1], \"\\n\")\n",
+    "#         assert j < 0\n",
     "#     print(fu(ui))\n",
     "    flog.append(fu(ui))\n",
+    "    steplog.append(np.linalg.norm(ui - ui_prev))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "194e5af8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "fig, ax1 = plt.subplots()\n",
+    "ax1.plot(x_ground(l), y_ground(l), 'b')\n",
+    "h0 = 0.3\n",
+    "plot_ride(env.xl, np.array(env.xh) + h0, \"traj\")\n",
+    "# ax1.plot(x_ground(xl), cos_a(xl), label=\"cos\")\n",
+    "# ax1.plot(x_ground(xl), ui, label=\"u\")\n",
+    "ax1.plot(x_ground(xl), np.array(env.xh), label=\"xh\")\n",
     "\n",
-    "plot_ride(env.xl, env.xh, \"traj\")\n",
-    "# plt.plot(x_ground(env.xl), np.array(env.vl)/10, label=\"speed\")\n",
     "plt.legend()\n",
-    "plt.show()\n",
-    "plt.plot(flog)\n",
+    "ax2 = ax1.twinx()\n",
+    "c = \"purple\"\n",
+    "ax2.set_ylabel(\"speed\", color=c)\n",
+    "ax2.plot(x_ground(env.xl), np.array(env.vl), label=\"speed\", color=c)\n",
+    "\n",
+    "# ax3 = ax3.twinx()\n",
+    "plt.legend()\n",
+    "# plt.show()\n",
+    "# plt.plot(flog)\n",
     "    "
    ]
   },
@@ -344,65 +422,32 @@
     "# plot_ride(xl, xh, \"traj\")\n",
     "plt.legend()\n",
     "plt.show()\n",
-    "plt.plot(xl, env.vl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba28c95f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env = Env()\n",
-    "xl, xh = env.ride(u)\n",
-    "plt.plot(x_ground(l), y_ground(l), 'b')\n",
-    "plot_ride(xl, xh, \"traj\")\n",
+    "plt.plot(x_ground(xl), ui[:len(xl)], label=\"u\")\n",
+    "plt.title(\"u\")\n",
     "plt.legend()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dd62a50",
+   "id": "5c978c10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "# plt.plot(ui)\n",
-    "plt.plot(env.vl)"
+    "plt.plot(steplog)\n",
+    "plt.yscale(\"log\")\n",
+    "_ = plt.title(\"$||u_k - u_{k-1}||_2$\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e372c141",
+   "id": "75160c36",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.array([1,2,3])\n",
-    "x.resize(6)\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5cda4cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.shape, "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48062c02",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(np.cumsum(np.cumsum((ui + du) * dt) * dt))"
+    "plt.plot(np.array(flog) * dt)\n",
+    "_ = plt.title(\"final speed ($u_k$), or f * dt\")"
    ]
   },
   {
@@ -412,7 +457,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "%matplotlib notebook\n",
     "\n",
     "# Initialize the movie\n",
@@ -423,13 +467,14 @@
     "\n",
     "# plot the sine wave line\n",
     "ground, = plt.plot(x_ground(l), y_ground(l), 'b')\n",
-    "plt.plot(x_ground(xl), y_ground(xl) + xh, 'g-')\n",
+    "h0 = 0.5 - np.array(env.xh).min()\n",
+    "plt.plot(x_ground(env.xl), y_ground(env.xl) + env.xh + h0, 'g-')\n",
     "line, = plt.plot([], [])\n",
     "lower_circle, = plt.plot([], [], 'ro', markersize = 10)\n",
     "upper_circle, = plt.plot([], [], 'ro', markersize = 10)\n",
     "\n",
     "plt.xlim(xlim)\n",
-    "plt.ylim(ylim)\n",
+    "# plt.ylim(ylim+1)\n",
     "# plt.xlabel('x')\n",
     "# plt.ylabel('sin(x)')\n",
     "\n",
@@ -438,32 +483,14 @@
     "    xl_i, xh_i = env.xl[i], env.xh[i]\n",
     "    x, y = x_ground(xl_i), y_ground(xl_i)\n",
     "    lower_circle.set_data(x, y)\n",
-    "    upper_circle.set_data(x, y + xh_i)\n",
-    "    line.set_data([x, x], [y, y+ xh_i])\n",
+    "    upper_circle.set_data(x, y + xh_i + h0)\n",
+    "    line.set_data([x, x], [y, y+ xh_i + h0])\n",
     "        \n",
     "\n",
     "ani = FuncAnimation(fig, update, frames=np.arange(len(xl)),\n",
     "                    interval=5)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45312877",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(xh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2eddef93",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
